--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <section id="Cookie Store-profiles"></section>
     <h2><a href="sales.html">Home</a></h2>
 
+
+
     <!-- ! generate this from js: -->
     <!--
         <article>
@@ -34,7 +36,7 @@
 
   </main>
   <footer>&copy; DomDoms Salmon Cookie Store Inc</footer>
-  <script src="js/app.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
