--- a/sales.html
+++ b/sales.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Salmon cookies</title>
+  <title>Salmon Cookies Sales</title>
 </head>
+
 <body>
-    <h2><a href="index.html">Home</a></h2>
-    <h1>Sales Data</h1>
-    <h2>Seattle:</h2>
-    <ul id="SeattleList"></ul>
-    <script src="apps.js"></script>
+  <h2><a href="index.html">Home</a></h2>
+  <table id="SalesTable"></table>
+  <tr>
+    <th>6:00am</th>
+    <th>7:00am</th>
+    <th>68:00am</th>
+    <th>9:00am</th>
+    <th>10:00am</th>
+    <th>11:00am</th>
+    <th>12:00pm</th>
+    <th>1:00pm</th>
+    <th>12:00pm</th>
+    <th>1:00pm</th>
+    <th>2:00pm</th>
+    <th>3:00pm</th>
+    <th>4:00pm</th>
+    <th>5:00pm</th>
+    <th>4:00pm</th>
+    <th>5:00pm</th>
+    <th>Daily Location Total</th>
+  </tr>
+  <tr>
+    <td>Seattle</td>
+  </tr>
+  <tr>
+    <th>Tokyo</th>
+  </tr>
+  <tr>
+    <th>Dubai</th>
+  </tr>
+  <tr>
+    <th>Paris</th>
+  </tr>
+  <tr>
+    <th>Lima</th>
+  </tr>
+  <tr>
+    <th>Totals</th>
+  </tr>
+  
+<script src="apps.js"></script>
+
 </body>
 </html>
+
+<!-- ---Table Rendering Code--- -->
+
