--- a/sales.html
+++ b/sales.html
@@ -10,49 +10,16 @@
 
 <body>
   <h2><a href="index.html">Home</a></h2>
-  <table id="SalesTable"></table>
-  <tr>
-    <th>6:00am</th>
-    <th>7:00am</th>
-    <th>68:00am</th>
-    <th>9:00am</th>
-    <th>10:00am</th>
-    <th>11:00am</th>
-    <th>12:00pm</th>
-    <th>1:00pm</th>
-    <th>12:00pm</th>
-    <th>1:00pm</th>
-    <th>2:00pm</th>
-    <th>3:00pm</th>
-    <th>4:00pm</th>
-    <th>5:00pm</th>
-    <th>4:00pm</th>
-    <th>5:00pm</th>
-    <th>Daily Location Total</th>
-  </tr>
-  <tr>
-    <td>Seattle</td>
-  </tr>
-  <tr>
-    <th>Tokyo</th>
-  </tr>
-  <tr>
-    <th>Dubai</th>
-  </tr>
-  <tr>
-    <th>Paris</th>
-  </tr>
-  <tr>
-    <th>Lima</th>
-  </tr>
-  <tr>
-    <th>Totals</th>
-  </tr>
-  
-<script src="apps.js"></script>
+    <table id="SalesTable">
 
+
+  </table>
+
+  <script src="./apps.js"></script>
+  <link rel="stylesheet" href="./CSS/reset.css">
+<link rel="stylesheet" href="./CSS/style.css">
 </body>
+
 </html>
 
 <!-- ---Table Rendering Code--- -->
-
