--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
 <body>
   <header>
-    <h1>Salmon Cookies</h1>
-  </header>
-  <main>
+    <h1>Pat's Salmon Cookies</h1>
+    <img link href=""  
+    <head>
+        <address>
+          85 Pike Street<br>
+          Seattle,<br>
+          WA 98103<br>
+          USA
+        </address>
+        <a href="mailto:webmaster@example.com">SeattleSalmonCookies.com</a>.<br>
+      </head>
+    <!-- <h2>Salmon Cookie Stores</h2>
     <h2>Salmon Cookie Stores</h2>
+    <h2>Salmon Cookie Stores</h2>
+    <h2>Salmon Cookie Stores</h2> -->
+
     <section id="Cookie Store-profiles"></section>
-    <h2><a href="sales.html">Home</a></h2>
+    <h2><a href="sales.html">Sales</a></h2>
 
 
 
@@ -35,7 +47,7 @@
        -->
 
   </main>
-  <footer>&copy; DomDoms Salmon Cookie Store Inc</footer>
+  <footer>&copy; Pat's Salmon Cookie Store Inc</footer>
   <script src="app.js"></script>
 </body>
 
