--- a/sales.html
+++ b/sales.html
@@ -10,14 +10,14 @@
 
 <body>
   <h2><a href="index.html">Home</a></h2>
-    <table id="SalesTable">
+  <table id="SalesTable">
 
 
   </table>
 
   <script src="./apps.js"></script>
-  <link rel="stylesheet" href="./CSS/reset.css">
-<link rel="stylesheet" href="./CSS/style.css">
+  <link rel="stylesheet" href="CSS/reset.css">
+  <link rel="stylesheet" href="CSS/style.css">
 </body>
 
 </html>
