--- a/index.html
+++ b/index.html
@@ -1,30 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<h2></h2>
+<img src="Image Assets/chinook.jpg">
+
 <body>
   <header>
     <h1>Pat's Salmon Cookies</h1>
-    <img link href=""  
-    <head>
-        <address>
-          85 Pike Street<br>
-          Seattle,<br>
-          WA 98103<br>
-          USA
-        </address>
-        <a href="mailto:webmaster@example.com">SeattleSalmonCookies.com</a>.<br>
-      </head>
-    <!-- <h2>Salmon Cookie Stores</h2>
+    <img link href="" <head>
+    <address>
+      <h3>Seattle Store</h3>
+      85 Pike Street<br>
+      Seattle,<br>
+      WA 98103<br>
+      USA
+    </address>
+    <hours>Open Hours 9am-420pm</hours>
+
+    <address>
+      <h3>Tokyo Store</h3>
+      85 Fish Street<br>
+      Tokyo,<br>
+      Japan
+    </address>
+    <hours>Open Hours 9am-420pm</hours>
+
+    <address>
+      <h3>Dubai Store</h3>
+      85 Fish Street<br>
+      Dubai,<br>
+      UAE
+    </address>
+    <hours>Open Hours 9am-420pm</hours>
+
+    <address>
+      <h3>Paris Store</h3>
+      85 Fish Street<br>
+      Paris,<br>
+      France
+    </address>
+    <hours>Open Hours 9am-420pm</hours>
+
+    <address>
+      <h3>Lima Store</h3>
+      85 Fish Street<br>
+      Lima,<br>
+      Peru
+    </address>
+    <hours>Open Hours 9am-420pm</hours>
+
+  </header>
+
+
+
+
+
+  <!-- <h2>Salmon Cookie Stores</h2>
     <h2>Salmon Cookie Stores</h2>
     <h2>Salmon Cookie Stores</h2>
     <h2>Salmon Cookie Stores</h2> -->
 
-    <section id="Cookie Store-profiles"></section>
-    <h2><a href="sales.html">Sales</a></h2>
+  <section id="Cookie Store-profiles"></section>
+  <h1><a href="sales.html">Sales</a></h1>
+  <h2><a href="mailto:webmaster@example.com">SalmonCookies.com</a><br></h2>
+
+  <img src="Image Assets/cutter.jpeg" width="200" height="100">
+  <img src="Image Assets/family.jpg" width="200" height="100">
+  <img src="Image Assets/fish.jpg" width="200" height="100">
+  <img src="Image Assets/frosted-cookie.jpg" width="200" height="100">
+  <img src="Image Assets/salmon.png" width="200" height="100">
 
 
-
-    <!-- ! generate this from js: -->
-    <!--
+  <!-- ! generate this from js: -->
+  <!--
         <article>
            <h2></h2>
            <p></p>
@@ -36,7 +84,7 @@
         </article>
         -->
 
-    <!-- <article>
+  <!-- <article>
           <h2></h2>
           <p></p>
           <ul>
