--- a/sales.html
+++ b/sales.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h2><a href="index.html">Home</a></h2>
+  <h2><a href="index.html">Store index </a></h2>
   <table id="SalesTable">
 
 
