--- a/index.html
+++ b/index.html
@@ -7,47 +7,49 @@
 <body>
   <header>
     <h1>Pat's Salmon Cookies</h1>
-    <img link href="" <head>
-    <address>
-      <h3>Seattle Store</h3>
-      85 Pike Street<br>
-      Seattle,<br>
-      WA 98103<br>
-      USA
-    </address>
-    <hours>Open Hours 9am-420pm</hours>
+    <img link href="">
 
-    <address>
-      <h3>Tokyo Store</h3>
-      85 Fish Street<br>
-      Tokyo,<br>
-      Japan
-    </address>
-    <hours>Open Hours 9am-420pm</hours>
+    <head>
+      <address>
+        <h3>Seattle Store</h3>
+        85 Pike Street<br>
+        Seattle,<br>
+        WA 98103<br>
+        USA
+      </address>
+      <hours>Open Hours 9am-420pm</hours>
 
-    <address>
-      <h3>Dubai Store</h3>
-      85 Fish Street<br>
-      Dubai,<br>
-      UAE
-    </address>
-    <hours>Open Hours 9am-420pm</hours>
+      <address>
+        <h3>Tokyo Store</h3>
+        85 Fish Street<br>
+        Tokyo,<br>
+        Japan
+      </address>
+      <hours>Open Hours 9am-420pm</hours>
 
-    <address>
-      <h3>Paris Store</h3>
-      85 Fish Street<br>
-      Paris,<br>
-      France
-    </address>
-    <hours>Open Hours 9am-420pm</hours>
+      <address>
+        <h3>Dubai Store</h3>
+        85 Fish Street<br>
+        Dubai,<br>
+        UAE
+      </address>
+      <hours>Open Hours 9am-420pm</hours>
 
-    <address>
-      <h3>Lima Store</h3>
-      85 Fish Street<br>
-      Lima,<br>
-      Peru
-    </address>
-    <hours>Open Hours 9am-420pm</hours>
+      <address>
+        <h3>Paris Store</h3>
+        85 Fish Street<br>
+        Paris,<br>
+        France
+      </address>
+      <hours>Open Hours 9am-420pm</hours>
+
+      <address>
+        <h3>Lima Store</h3>
+        85 Fish Street<br>
+        Lima,<br>
+        Peru
+      </address>
+      <hours>Open Hours 9am-420pm</hours>
 
   </header>
 
